
New features
- Captive Portal network access detection is more accurate and way faster
  (javascript-based)
- Easier integration and configuration of FreeRADIUS 2.x using our new
  packetfence-freeradius2 RPM
- Apache configuration is automatically adjusted on startup based on system 
  resources to avoid performance degradation on heavy workloads (#1204)

Enhancements
- Moved several configuration files from conf/templates/ into conf/ (#1166)
- SSL certificate configuration for httpd is now in a separate file that is not
  overwritten by packages making it easier to maintain (#1207)
- OS Class ID are now visible when viewing DHCP Fingerprints (#1181)
- Process ID information in the logs for some daemons
- Removed unused configuration parameters (#767)
- Refactoring of the code base (#1058)
- FAQ entry: Active directory integration in registration network
- Captive Portal minor usability improvements
- Reorganized default violation classes to be more coherent and self-documented

Bug Fixes
- Fixed OS id not visible when dhcp-fingerprint view is filtered (#1180)
- Fixed rare case of Web Admin user account corruption causing homepage to 
  become status/dashboard instead of status/dashboard.php (#1196)
- Warning avoidance in Extreme Network modules
- installer and configurator scripts no longer output passwords on the terminal
  (#1021)

--------------------------------------------------------------------------------
Version <release> - <codename> released on <releaseDate>

New Hardware Support
- Motorola RF Switches (Wireless Controllers)
- 3Com Switches 4200G, E4800G and E5500G now supports MAC Authentication and 
  802.1X
- Dlink DGS 3100 Switches

New Features
- User-Agent violation support completely re-written. It is now easier than 
  ever to block devices or old browsers from your network. (#769, #1192)
- Administrators can now modify and preview remediation pages from the Web Admin