@@ -51,7 +51,7 @@ display=remediation
 remediation=Remediation Templates
 
 [ui.status.reports]
-display=ipmachistory,locationhistoryswitch,locationhistorymac,ifoctetshistoryswitch,ifoctetshistorymac,ifoctetshistoryuser,active,inactive,registered,unregistered,os,osclass,unknownprints,unknownuseragents,openviolations,statics
+display=ipmachistory,locationhistoryswitch,locationhistorymac,ifoctetshistoryswitch,ifoctetshistorymac,ifoctetshistoryuser,active,inactive,registered,unregistered,os,osclass,unknownprints,unknownuseragents,openviolations,statics,ssid
 ipmachistory=IP - MAC History
 locationhistoryswitch=Location History (switch)
 locationhistorymac=Location History (MAC)
@@ -68,6 +68,7 @@ unknownprints=Unknown Fingerprints
 unknownuseragents=Unknown User-Agents
 openviolations=Open Violations
 statics=Probable Static IPs
+ssid=SSID
 
 [ui.scan]
 display=scan, results
@@ -649,6 +650,13 @@ vlan=VLAN
 voip=VoIP
 connection_type=Type of connection
 command=report statics
+
+[ui.status.reports.ssid]
+display=ssid,percent,nodes
+ssid=SSID
+percent=Percent
+nodes=Nodes
+command=report ssid
 
 [ui.scan.scan]
 display=id,date,hosts,tid
